metadata/unpackaged/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>AttachmentId__c</fullName>
        <label>AttachmentId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attachment User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Content_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentID__c</fullName>
        <label>ParentID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>